force-app/main/default/objects/Case/fields/BairroRepresentante__c.field-meta.xml
<CustomField>
    <fullName>BairroRepresentante__c</fullName>
    <label>Bairro Representante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>