force-app/main/default/objects/Case/fields/CEPRepresentante__c.field-meta.xml
<CustomField>
    <fullName>CEPRepresentante__c</fullName>
    <label>CEP Representante</label>
    <length>20</length>
    <type>Text</type>
</CustomField>