force-app/main/default/objects/Case/fields/CertidaoNegativaCivel__c.field-meta.xml
<CustomField>
    <fullName>CertidaoNegativaCivel__c</fullName>
    <label>Certidão Negativa Cível</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>