force-app/main/default/objects/Case/fields/CertidaoNegativaCriminal__c.field-meta.xml
<CustomField>
    <fullName>CertidaoNegativaCriminal__c</fullName>
    <label>Certidão Negativa Criminal</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>