force-app/main/default/objects/Case/fields/CertidaoNegativaFederal__c.field-meta.xml
<CustomField>
    <fullName>CertidaoNegativaFederal__c</fullName>
    <label>Certidão Negativa Federal</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>