force-app/main/default/objects/Case/fields/CertidaoNegativaTrabalhista__c.field-meta.xml
<CustomField>
    <fullName>CertidaoNegativaTrabalhista__c</fullName>
    <label>Certidão Negativa Trabalhista</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>