force-app/main/default/objects/Case/fields/CidadeRepresentante__c.field-meta.xml
<CustomField>
    <fullName>CidadeRepresentante__c</fullName>
    <label>Cidade Representante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>