force-app/main/default/objects/Case/fields/ComentarioSuporte__c.field-meta.xml
<CustomField>
    <fullName>ComentarioSuporte__c</fullName>
    <description
  >Conclusão ou justificativa final informada pela equipe de TI quando o chamado é concluído ou cancelado.</description>
    <label>Comentário do Suporte</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>