force-app/main/default/objects/Case/fields/ComplementoRepresentante__c.field-meta.xml
<CustomField>
    <fullName>ComplementoRepresentante__c</fullName>
    <label>Complemento Representante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>