force-app/main/default/objects/Case/fields/ComprovanteEndereco__c.field-meta.xml
<CustomField>
    <fullName>ComprovanteEndereco__c</fullName>
    <label>Comprovante de Endereço</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>