force-app/main/default/objects/Case/fields/ContaCorrente__c.field-meta.xml
<CustomField>
    <fullName>ContaCorrente__c</fullName>
    <label>Conta Corrente</label>
    <length>20</length>
    <type>Text</type>
</CustomField>