force-app/main/default/objects/Case/fields/ContratoSocialUltimaAlteracao__c.field-meta.xml
<CustomField>
    <fullName>ContratoSocialUltimaAlteracao__c</fullName>
    <label>Contrato Social e Última Alteração</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>