force-app/main/default/objects/Case/fields/CPFRepresentante__c.field-meta.xml
<CustomField>
    <fullName>CPFRepresentante__c</fullName>
    <label>CPF Representante</label>
    <length>20</length>
    <type>Text</type>
</CustomField>