force-app/main/default/objects/Case/fields/Description_Rich__c.field-meta.xml
<CustomField>
    <fullName>Description_Rich__c</fullName>
    <label>Descrição (Rich Text)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>