force-app/main/default/objects/Case/fields/DesejaSeTornarConsultor__c.field-meta.xml
<CustomField>
    <fullName>DesejaSeTornarConsultor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deseja se tornar consultor ?</label>
    <type>Checkbox</type>
</CustomField>