force-app/main/default/objects/Case/fields/DiasAteResolucao__c.field-meta.xml
<CustomField>
    <fullName>DiasAteResolucao__c</fullName>
    <description>Tempo em dias corridos entre a abertura e o fechamento do chamado de Assistência Técnica. Calculado como DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate). Usado no indicador Tempo Médio de Resolução (Engenharia).</description>
    <formula>IF(IsClosed, DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate), NULL)</formula>
    <label>Dias até Resolução</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>