force-app/main/default/objects/Case/fields/DocPessoais_Socios_Representantes__c.field-meta.xml
<CustomField>
    <fullName>DocPessoais_Socios_Representantes__c</fullName>
    <label>Doc Pessoais Socios/Representantes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>