force-app/main/default/objects/Case/fields/EmailConsultorWeb__c.field-meta.xml
<CustomField>
    <fullName>EmailConsultorWeb__c</fullName>
    <label>Email do Consultor</label>
    <type>Email</type>
</CustomField>