force-app/main/default/objects/Case/fields/EmailIntegradorWeb__c.field-meta.xml
<CustomField>
    <fullName>EmailIntegradorWeb__c</fullName>
    <label>Email do Integrador</label>
    <type>Email</type>
</CustomField>