force-app/main/default/objects/Case/fields/EmailRepresentante__c.field-meta.xml
<CustomField>
    <fullName>EmailRepresentante__c</fullName>
    <label>Email Representante</label>
    <type>Email</type>
</CustomField>