force-app/main/default/objects/Case/fields/Endereco__c.field-meta.xml
<CustomField>
    <fullName>Endereco__c</fullName>
    <inlineHelpText>Endereço do cliente</inlineHelpText>
    <label>Endereço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>