force-app/main/default/objects/Case/fields/EnderecoRepresentante__c.field-meta.xml
<CustomField>
    <fullName>EnderecoRepresentante__c</fullName>
    <label>Endereço Representante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>