force-app/main/default/objects/Case/fields/Esta_na_garantia__c.field-meta.xml
<CustomField>
    <fullName>Esta_na_garantia__c</fullName>
    <label>Está na garantia?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>