force-app/main/default/objects/Case/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>TextArea</type>
</CustomField>