force-app/main/default/objects/Case/fields/EstadoRepresentante__c.field-meta.xml
<CustomField>
    <fullName>EstadoRepresentante__c</fullName>
    <label>Estado Representante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>