force-app/main/default/objects/Case/fields/EstimatedDateKitWeb__c.field-meta.xml
<CustomField>
    <fullName>EstimatedDateKitWeb__c</fullName>
    <label>Data de entrega Kit WEG</label>
    <type>Date</type>
</CustomField>