force-app/main/default/objects/Case/fields/Fechado_nas_ultimas_24h__c.field-meta.xml
<CustomField>
    <fullName>Fechado_nas_ultimas_24h__c</fullName>
    <formula>ClosedDate + 1 &gt; NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fechado nas ultimas 24h?</label>
    <type>Checkbox</type>
</CustomField>