force-app/main/default/objects/Case/fields/FichaCadastral__c.field-meta.xml
<CustomField>
    <fullName>FichaCadastral__c</fullName>
    <label>Ficha Cadastral</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>