force-app/main/default/objects/Case/fields/FotosInstalacoes__c.field-meta.xml
<CustomField>
    <fullName>FotosInstalacoes__c</fullName>
    <label>Fotos de Instalações</label>
    <length>255</length>
    <type>Text</type>
</CustomField>