force-app/main/default/objects/Case/fields/Gerente__c.field-meta.xml
<CustomField>
    <fullName>Gerente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Gestor do usuário solicitante, copiado no momento da criação do caso e usado como aprovador do Help Desk.</description>
    <label>Gestor aprovador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos_Gerente</relationshipName>
    <type>Lookup</type>
</CustomField>