force-app/main/default/objects/Case/fields/GerenteNome__c.field-meta.xml
<CustomField>
    <fullName>GerenteNome__c</fullName>
    <description
  >Snapshot do nome do Gerente (2º aprovador), gravado na criação do caso. Necessário porque o usuário Guest do portal não enxerga o objeto User e veria o nome mascarado.</description>
    <label>Gerente (Nome)</label>
    <length>121</length>
    <type>Text</type>
</CustomField>