force-app/main/default/objects/Case/fields/HelpDesk_Sistema__c.field-meta.xml
<CustomField>
    <fullName>HelpDesk_Sistema__c</fullName>
    <label>Sistema Help Desk</label>
    <length>80</length>
    <type>Text</type>
</CustomField>