force-app/main/default/objects/Case/fields/HelpDesk_Status__c.field-meta.xml
<CustomField>
    <fullName>HelpDesk_Status__c</fullName>
    <label>Status Help Desk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Criado</fullName>
                <default>true</default>
                <label>Criado</label>
            </value>
            <value>
                <fullName>Pendente Aprovação Gestor</fullName>
            </value>
            <value>
                <fullName>Pendente Aprovação Gerente</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Trabalhando</fullName>
            </value>
            <value>
                <fullName>Concluído</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>