force-app/main/default/objects/Case/fields/HelpDesk_Subtipo__c.field-meta.xml
<CustomField>
    <fullName>HelpDesk_Subtipo__c</fullName>
    <label>Subtipo Help Desk</label>
    <length>120</length>
    <type>Text</type>
</CustomField>