force-app/main/default/objects/Case/fields/HelpDesk_Tipo__c.field-meta.xml
<CustomField>
    <fullName>HelpDesk_Tipo__c</fullName>
    <label>Tipo Help Desk</label>
    <length>120</length>
    <type>Text</type>
</CustomField>