force-app/main/default/objects/Case/fields/JiraIssueKey__c.field-meta.xml
<CustomField>
    <fullName>JiraIssueKey__c</fullName>
    <description>Chave da issue criada no Jira ao aprovar o caso (ex.: HD-42). Vazio até a aprovação final.</description>
    <label>Jira Issue Key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>