force-app/main/default/objects/Case/fields/JiraIssueUrl__c.field-meta.xml
<CustomField>
    <fullName>JiraIssueUrl__c</fullName>
    <description>Link direto para a issue no Jira (browse). Preenchido ao aprovar o caso.</description>
    <label>Jira Issue URL</label>
    <type>Url</type>
</CustomField>