force-app/main/default/objects/Case/fields/JiraStatus__c.field-meta.xml
<CustomField>
    <fullName>JiraStatus__c</fullName>
    <description>Status atual da issue no Jira. Preenchido pelo sync (fase 2). Vazio nesta fase.</description>
    <label>Jira Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendente</fullName>
            </value>
            <value>
                <fullName>Trabalhando</fullName>
            </value>
            <value>
                <fullName>Concluido</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>