force-app/main/default/objects/Case/fields/ManagerName__c.field-meta.xml
<CustomField>
    <fullName>ManagerName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gestor de obras</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>