force-app/main/default/objects/Case/fields/MonitoringApplication__c.field-meta.xml
<CustomField>
    <fullName>MonitoringApplication__c</fullName>
    <label>Aplicativo para Monitoramento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>