force-app/main/default/objects/Case/fields/Necessario_servico_campo__c.field-meta.xml
<CustomField>
    <fullName>Necessario_servico_campo__c</fullName>
    <label>Necessário serviço de campo?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>