force-app/main/default/objects/Case/fields/Nome_da_Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Nome_da_Oportunidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nome da Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>