force-app/main/default/objects/Case/fields/Nome_do_Consultor__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Consultor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nome do Consultor</label>
    <referenceTo>Consultor__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>