force-app/main/default/objects/Case/fields/NomeConsultorWeb__c.field-meta.xml
<CustomField>
    <fullName>NomeConsultorWeb__c</fullName>
    <label>Nome do Consultor</label>
    <type>TextArea</type>
</CustomField>