force-app/main/default/objects/Case/fields/NomeFantasia__c.field-meta.xml
<CustomField>
    <fullName>NomeFantasia__c</fullName>
    <inlineHelpText>Nome fantasia do cliente</inlineHelpText>
    <label>Nome Fantasia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>