force-app/main/default/objects/Case/fields/NomeIntegradorWeb__c.field-meta.xml
<CustomField>
    <fullName>NomeIntegradorWeb__c</fullName>
    <label>Nome do Integrador</label>
    <type>TextArea</type>
</CustomField>