force-app/main/default/objects/Case/fields/NomeRepresentante__c.field-meta.xml
<CustomField>
    <fullName>NomeRepresentante__c</fullName>
    <inlineHelpText>Nome do representante do cliente</inlineHelpText>
    <label>Nome Representante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>