force-app/main/default/objects/Case/fields/Oportunidade_Pai__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade_Pai__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidade Pai</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Casos Oportunidade Pai</relationshipLabel>
    <relationshipName>OportunidadePaiCasos</relationshipName>
    <type>Lookup</type>
</CustomField>