force-app/main/default/objects/Case/fields/PaisIntegrador__c.field-meta.xml
<CustomField>
    <fullName>PaisIntegrador__c</fullName>
    <label>Pais Integrador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brasil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>