force-app/main/default/objects/Case/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Senha</label>
    <length>255</length>
    <type>Text</type>
</CustomField>