force-app/main/default/objects/Case/fields/PortfolioEmpresa__c.field-meta.xml
<CustomField>
    <fullName>PortfolioEmpresa__c</fullName>
    <label>Portfólio da Empresa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>