force-app/main/default/objects/Case/fields/ProjectApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>ProjectApprovalDate__c</fullName>
    <label>Data de aprovação do Projeto</label>
    <type>Date</type>
</CustomField>