force-app/main/default/objects/Case/fields/RazaoSocial__c.field-meta.xml
<CustomField>
    <fullName>RazaoSocial__c</fullName>
    <inlineHelpText>Razão social do cliente</inlineHelpText>
    <label>Razao Social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>