force-app/main/default/objects/Case/fields/RequerimentoDeEmpresario__c.field-meta.xml
<CustomField>
    <fullName>RequerimentoDeEmpresario__c</fullName>
    <label>Requerimento de empresário</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>