force-app/main/default/objects/Case/fields/StatusAprovacao__c.field-meta.xml
<CustomField>
    <fullName>StatusAprovacao__c</fullName>
    <description>Status do processo de aprovação do caso no Help Desk, atualizado pelas ações do Approval Process.</description>
    <label>Status da Aprovação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendente</fullName>
            </value>
            <value>
                <fullName>Em Aprovação</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Rejeitado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>