force-app/main/default/objects/Case/fields/StatusIntegrador__c.field-meta.xml
<CustomField>
    <fullName>StatusIntegrador__c</fullName>
    <formula>IF(TEXT(Status)==&apos;Integrador Aprovado&apos;, &apos;Aprovado&apos;, IF(TEXT(Status)==&apos;Integrador Rejeitado&apos;, &apos;Rejeitado&apos;, &apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Integrador</label>
    <type>Text</type>
</CustomField>