force-app/main/default/objects/Case/fields/Subtipo_de_caso__c.field-meta.xml
<CustomField>
    <fullName>Subtipo_de_caso__c</fullName>
    <label>Subtipo de caso</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Serviços</fullName>
            </value>
            <value>
                <fullName>Irregularidades,Equipamentos e/ou Instalações</fullName>
            </value>
            <value>
                <fullName>Erro Interno</fullName>
            </value>
            <value>
                <fullName>Atendimento ao Cliente</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Análise Interna</fullName>
            </value>
            <value>
                <fullName>Análise de Fatura</fullName>
            </value>
            <value>
                <fullName>Cadastro de beneficiária</fullName>
            </value>
            <value>
                <fullName>Reclamações</fullName>
            </value>
            <value>
                <fullName>Alterações Contratuais</fullName>
            </value>
            <value>
                <fullName>Limpeza</fullName>
                <isActive>false</isActive>
                <label>Limpeza</label>
            </value>
            <value>
                <fullName>Reinstalação</fullName>
                <isActive>false</isActive>
                <label>Reinstalação</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>