force-app/main/default/objects/Case/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Supervisor do contato, copiado no momento da criação do caso. Usado como 1º aprovador no processo de aprovação do Help Desk.</description>
    <label>Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos_Supervisor</relationshipName>
    <type>Lookup</type>
</CustomField>