force-app/main/default/objects/Case/fields/SupervisorNome__c.field-meta.xml
<CustomField>
    <fullName>SupervisorNome__c</fullName>
    <description
  >Snapshot do nome do Supervisor (1º aprovador), gravado na criação do caso. Necessário porque o usuário Guest do portal não enxerga o objeto User e veria o nome mascarado.</description>
    <label>Supervisor (Nome)</label>
    <length>121</length>
    <type>Text</type>
</CustomField>