force-app/main/default/objects/Case/fields/TelefoneRepresentante__c.field-meta.xml
<CustomField>
    <fullName>TelefoneRepresentante__c</fullName>
    <label>Telefone Representante</label>
    <type>Phone</type>
</CustomField>