force-app/main/default/objects/Case/fields/Tipo_de_Caso__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Caso__c</fullName>
    <label>Tipo de Caso</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_de_conta__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assistência Técnica</fullName>
            </value>
            <value>
                <fullName>Financeiro</fullName>
            </value>
            <value>
                <fullName>Manutenção</fullName>
            </value>
            <value>
                <fullName>Viabilidade Técnica</fullName>
            </value>
            <value>
                <fullName>Suporte Técnico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>