force-app/main/default/objects/Case/fields/Tipo_de_conta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_conta__c</fullName>
    <label>Tipo de conta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TipoConta</valueSetName>
    </valueSet>
</CustomField>