force-app/main/default/objects/Case/fields/Tipo_de_contrato__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_contrato__c</fullName>
    <label>Contrato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Obra/Instalação Executada</fullName>
            </value>
            <value>
                <fullName>Venda Executada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>