force-app/main/default/objects/Case/fields/TipoDeIntegrador__c.field-meta.xml
<CustomField>
    <fullName>TipoDeIntegrador__c</fullName>
    <label>Tipo de Integrador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INTEGRADOR I - INTEGRADOR</fullName>
            </value>
            <value>
                <fullName>INTEGRADOR II - PRESTADOR DE SERVIÇO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>