force-app/main/default/objects/Case/recordTypes/Assist_ncia_T_cnica_Gest_o_de_Faturas_e_Concession_rias_Interno.recordType-meta.xml
<RecordType>
    <fullName>Assist_ncia_T_cnica_Gest_o_de_Faturas_e_Concession_rias_Interno</fullName>
    <active>true</active>
    <businessProcess>Assistência Técnica - Gestão de Faturas e Concessionárias</businessProcess>
    <label>Assistência Técnica - Gestão de Faturas e Concessionárias (Interno)</label>
</RecordType>