force-app/main/default/objects/Case/recordTypes/Assist_ncia_T_cnica_Manuten_es_e_Garantias_Servi_os.recordType-meta.xml
<RecordType>
    <fullName>Assist_ncia_T_cnica_Manuten_es_e_Garantias_Servi_os</fullName>
    <active>true</active>
    <businessProcess>Assistência Técnica - Manutenções e Garantias</businessProcess>
    <label>Assistência Técnica - Manutenções e Garantias (Serviços)</label>
</RecordType>