force-app/main/default/objects/Case/recordTypes/Assistencia_Tecnica.recordType-meta.xml
<RecordType>
    <fullName>Assistencia_Tecnica</fullName>
    <active>true</active>
    <businessProcess>Assistência Técnica</businessProcess>
    <label>Assistência Técnica</label>
</RecordType>