force-app/main/default/objects/Case/recordTypes/Assistencia_Tecnica_Gestao_de_Faturas_e_Concessionarias.recordType-meta.xml
<RecordType>
    <fullName>Assistencia_Tecnica_Gestao_de_Faturas_e_Concessionarias</fullName>
    <active>true</active>
    <businessProcess>Assistência Técnica</businessProcess>
    <label>Assistência Técnica - Gestão de Faturas e Concessionárias (Outros)</label>
</RecordType>