force-app/main/default/objects/Case/recordTypes/Assistencia_Tecnica_Manutencao_Garantia.recordType-meta.xml
<RecordType>
    <fullName>Assistencia_Tecnica_Manutencao_Garantia</fullName>
    <active>true</active>
    <businessProcess>Assistência Técnica</businessProcess>
    <label>Assistência Técnica - Manutenções e Garantias</label>
</RecordType>