force-app/main/default/objects/Case/recordTypes/Help_Desk_Salesforce.recordType-meta.xml
<RecordType>
    <fullName>Help_Desk_Salesforce</fullName>
    <active>true</active>
    <businessProcess>Help_Desk</businessProcess>
    <description>Casos criados e gerenciados pelo portal de Help Desk Salesforce.</description>
    <label>Help Desk Salesforce</label>
</RecordType>