force-app/main/default/objects/Case/recordTypes/Jornada_do_Cliente.recordType-meta.xml
<RecordType>
    <fullName>Jornada_do_Cliente</fullName>
    <active>true</active>
    <businessProcess>Jornada do Cliente</businessProcess>
    <label>Jornada do Cliente</label>
</RecordType>