force-app/main/default/objects/Case/recordTypes/Operacao_e_Manutencao.recordType-meta.xml
<RecordType>
    <fullName>Operacao_e_Manutencao</fullName>
    <active>true</active>
    <businessProcess>Assistência Técnica</businessProcess>
    <label>Operação e Manutenção</label>
</RecordType>