force-app/main/default/objects/Case/recordTypes/QualificacaoDeConsultores.recordType-meta.xml
<RecordType>
    <fullName>QualificacaoDeConsultores</fullName>
    <active>false</active>
    <businessProcess>Qualificação de Consultores</businessProcess>
    <label>Qualificação de Consultores</label>
</RecordType>