force-app/main/default/objects/Case/recordTypes/QualificacaoDeIntegradores.recordType-meta.xml
<RecordType>
    <fullName>QualificacaoDeIntegradores</fullName>
    <active>true</active>
    <businessProcess>Qualificação de Integradores</businessProcess>
    <label>Qualificação de Integradores</label>
</RecordType>