force-app/main/default/objects/Case/recordTypes/Retomada.recordType-meta.xml
<RecordType>
    <fullName>Retomada</fullName>
    <active>true</active>
    <businessProcess>Assistência Técnica</businessProcess>
    <label>Retomada</label>
</RecordType>