force-app/main/default/objects/Case/validationRules/Ordem_Caminho_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Ordem_Caminho_Status</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
CONTAINS(RecordType.DeveloperName, &quot;QualificacaoDeIntegradores&quot;),
ISCHANGED(Status),
OR(
AND(
ISPICKVAL(Status, &quot;Qualificação Documental&quot;),
NOT(ISPICKVAL(PRIORVALUE(Status), &quot;Qualificação Técnica&quot;))
),
AND(
ISPICKVAL(Status, &quot;Elaboração do Contrato&quot;),
NOT(ISPICKVAL(PRIORVALUE(Status), &quot;Qualificação Documental&quot;))
),
AND(
ISPICKVAL(Status, &quot;Enviado/Aguardando Assinatura&quot;),
NOT(ISPICKVAL(PRIORVALUE(Status), &quot;Elaboração do Contrato&quot;))
),
AND(
ISPICKVAL(Status, &quot;Integrador Aprovado&quot;),
NOT(ISPICKVAL(PRIORVALUE(Status), &quot;Enviado/Aguardando Assinatura&quot;))
)
)
)</errorConditionFormula>
    <errorMessage>Sequencia do caminho incorreta! Favor seguir com a próxima etapa.</errorMessage>
</ValidationRule>