force-app/main/default/objects/Case/validationRules/Valida_Oportunidade.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Oportunidade</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL( Tipo_de_conta__c, &quot;Cliente&quot;) , 
				ISPICKVAL(Tipo_de_Caso__c, &quot;Viabilidade Técnica&quot;),   
				    ISBlank (Nome_da_Oportunidade__c))</errorConditionFormula>
    <errorDisplayField>Nome_da_Oportunidade__c</errorDisplayField>
    <errorMessage>O campo nome da oportunidade deve ser preenchido!</errorMessage>
</ValidationRule>