force-app/main/default/objects/Case/listViews/Assist_ncia_tecnica_Em_andamento.listView-meta.xml
<ListView>
    <fullName>Assist_ncia_tecnica_Em_andamento</fullName>
    <booleanFilter>(1 OR 2 ) AND 3</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>Assistência tecnica</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Assistencia_Tecnica,Case.Assist_ncia_T_cnica_Gest_o_de_Faturas_e_Concession_rias_Interno,Case.Assistencia_Tecnica_Gestao_de_Faturas_e_Concessionarias,Case.Assistencia_Tecnica_Manutencao_Garantia,Case.Assist_ncia_T_cnica_Manuten_es_e_Garantias_Servi_os</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Em andamento</value>
    </filters>
    <label>Assistência tecnica - Em andamento</label>
</ListView>